[package]
name = "rs_snake"
version = "0.1.0"
authors = ["Stefan Andreas Baur <stefan_andreas.baur@daimler.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
device_query = "0.2.0"
crossterm = { version = "0.14.1", features = ["event-stream"] }
futures = "0.3"
futures-timer = "2"
async-std = "1"
clap = "2"

