[package]
name = "rs_snake"
version = "0.1.0"
authors = ["Stefan Andreas Baur <stefan_andreas.baur@daimler.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3"
futures-timer = "3"
async-std = "1"
clap = "4"

